--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,15 @@ dependencies:
   cloud_firestore:
   flutter:
     sdk: flutter
+  provider: ^6.1.2 # Add provider dependency
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.18.1 # Add intl dependency
+  google_maps_flutter: ^2.5.0 # Add google_maps_flutter dependency
+
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
