--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth:
   firebase_core: ^4.2.1
   cloud_firestore:
+  firebase_storage:
   flutter:
     sdk: flutter
   provider: ^6.1.2 # Add provider dependency
@@ -41,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.18.1 # Add intl dependency
   google_maps_flutter: ^2.5.0 # Add google_maps_flutter dependency
+  google_fonts: ^6.3.2
+  image_picker: ^1.0.7
 
 
 dev_dependencies:
@@ -67,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
