--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   firebase_auth:
 
   cloud_functions: # ou version plus récente
@@ -37,8 +38,8 @@ dependencies:
   firebase_storage:
   flutter:
     sdk: flutter
-  provider: ^6.1.2 # Add provider dependency
-
+  provider: ^6.1.2
+  cloudinary_public:  # Vérifiez la dernière version sur pub.dev
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
